modified home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,10 +23,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Kernel Boot</h1>
+      <h1 class="mr-2">Hello, World!</h1>
       <p>
         Welcome to my little corner of the internet, where I share my journey in 
-        offensive security and cloud security. From experimenting with the latest 
+        all things cyber. From experimenting with the latest 
         penetration testing tools to devising strategies for securing cloud systems, 
         I document every step here. This blog is a collection of tips, tricks, 
         and personal stories, offering a genuine glimpse into the world of digital 
